--- a/gr-blocks/grc/blocks_file_meta_sink.block.yml
+++ b/gr-blocks/grc/blocks_file_meta_sink.block.yml
@@ -62,7 +62,7 @@ asserts:
 templates:
     imports: from gnuradio import gr, blocks
     make: |-
-        blocks.file_meta_sink(${type.size}*${vlen}, ${file}, ${samp_rate}, ${rel_rate}, ${type.dtype}, ${type.cplx}, ${max_seg_size}, ${extra_dict}, ${detached})
+        blocks.file_meta_sink(${type.size}*(${vlen}), ${file}, ${samp_rate}, ${rel_rate}, ${type.dtype}, ${type.cplx}, ${max_seg_size}, ${extra_dict}, ${detached})
         self.${id}.set_unbuffered(${unbuffered})
     callbacks:
     - set_unbuffered(${unbuffered})
