--- a/gr-blocks/grc/blocks_probe_rate.block.yml
+++ b/gr-blocks/grc/blocks_probe_rate.block.yml
@@ -40,11 +40,11 @@ asserts:
 
 templates:
     imports: from gnuradio import blocks
-    make: blocks.probe_rate(${type.size}*${vlen}, ${mintime}, ${alpha})
+    make: blocks.probe_rate(${type.size}*(${vlen}), ${mintime}, ${alpha})
 
 cpp_templates:
     includes: ['#include <gnuradio/blocks/probe_rate.h>']
     declarations: 'blocks::probe_rate::sptr ${id};'
-    make: 'this->${id} = blocks::probe_rate::make(${type.size}*${vlen}, ${mintime}, ${alpha});'
+    make: 'this->${id} = blocks::probe_rate::make(${type.size}*(${vlen}), ${mintime}, ${alpha});'
 
 file_format: 1
