--- a/gr-blocks/grc/blocks_tagged_file_sink.block.yml
+++ b/gr-blocks/grc/blocks_tagged_file_sink.block.yml
@@ -31,11 +31,11 @@ asserts:
 
 templates:
     imports: from gnuradio import blocks
-    make: blocks.tagged_file_sink(${type.size}*${vlen}, ${samp_rate})
+    make: blocks.tagged_file_sink(${type.size}*(${vlen}), ${samp_rate})
 
 cpp_templates:
     includes: ['#include <gnuradio/blocks/tagged_file_sink.h>']
     declarations: 'blocks::tagged_file_sink::sptr ${id};'
-    make: 'this->${id} = blocks::tagged_file_sink::make(${type.size}*${vlen}, ${samp_rate});'
+    make: 'this->${id} = blocks::tagged_file_sink::make(${type.size}*(${vlen}), ${samp_rate});'
 
 file_format: 1
