--- a/gr-blocks/grc/blocks_tagged_stream_multiply_length.block.yml
+++ b/gr-blocks/grc/blocks_tagged_stream_multiply_length.block.yml
@@ -39,7 +39,7 @@ outputs:
 
 templates:
     imports: from gnuradio import blocks
-    make: blocks.tagged_stream_multiply_length(${type.size}*${vlen}, ${lengthtagname},
+    make: blocks.tagged_stream_multiply_length(${type.size}*(${vlen}), ${lengthtagname},
         ${c})
     callbacks:
     - set_scalar(${c})
@@ -47,7 +47,7 @@ templates:
 cpp_templates:
     includes: ['#include <gnuradio/blocks/tagged_stream_multiply_length.h>']
     declarations: 'blocks::tagged_stream_multiply_length::sptr ${id};'
-    make: 'this->${id} = blocks.tagged_stream_multiply_length(${type.size}*${vlen}, ${lengthtagname},
+    make: 'this->${id} = blocks.tagged_stream_multiply_length(${type.size}*(${vlen}), ${lengthtagname},
         ${c});'
     callbacks:
     - set_scalar(${c})
