--- a/gr-analog/grc/analog_wfm_tx.block.yml
+++ b/gr-analog/grc/analog_wfm_tx.block.yml
@@ -41,7 +41,7 @@ templates:
 cpp_templates:
     includes: [ '#include <gnuradio/analog/frequency_modulator_fc.h>', '#include <gnuradio/math.h>' ]
     declarations: gr::analog::frequency_modulator_fc::sptr ${id};
-    make: this->${id} = gr::analog::frequency_modulator_fc::make(2 * (GR_M_PI) * ${max_dev} / ${quad_rate});
+    make: this->${id} = gr::analog::frequency_modulator_fc::make(2 * (GR_M_PI) * (${max_dev}) / (${quad_rate}));
     link: ['gnuradio::gnuradio-analog']          
       
 file_format: 1
