--- a/gr-blocks/grc/blocks_keep_one_in_n.block.yml
+++ b/gr-blocks/grc/blocks_keep_one_in_n.block.yml
@@ -38,14 +38,14 @@ asserts:
 
 templates:
     imports: from gnuradio import blocks
-    make: blocks.keep_one_in_n(${type.size}*${vlen}, ${n})
+    make: blocks.keep_one_in_n(${type.size}*(${vlen}), ${n})
     callbacks:
     - set_n(${n})
 
 cpp_templates:
     includes: ['#include <gnuradio/blocks/keep_one_in_n.h>']
     declarations: 'blocks::keep_one_in_n::sptr ${id};'
-    make: 'this->${id} = blocks::keep_one_in_n::make(${type.size}*${vlen}, ${n});'
+    make: 'this->${id} = blocks::keep_one_in_n::make(${type.size}*(${vlen}), ${n});'
     callbacks:
     - set_n(${n})
 
