--- a/gr-blocks/grc/blocks_repeat.block.yml
+++ b/gr-blocks/grc/blocks_repeat.block.yml
@@ -35,14 +35,14 @@ asserts:
 
 templates:
     imports: from gnuradio import blocks
-    make: blocks.repeat(${type.size}*${vlen}, ${interp})
+    make: blocks.repeat(${type.size}*(${vlen}), ${interp})
     callbacks:
     - set_interpolation(${interp})
 
 cpp_templates:
     includes: ['#include <gnuradio/blocks/repeat.h>']
     declarations: 'blocks::repeat::sptr ${id};'
-    make: 'this->${id} = blocks::repeat::make(${type.size}*${vlen}, ${interp});'
+    make: 'this->${id} = blocks::repeat::make(${type.size}*(${vlen}), ${interp});'
     callbacks:
     - set_interpolation(${interp})
 
