--- a/gr-blocks/grc/blocks_streams_to_vector.block.yml
+++ b/gr-blocks/grc/blocks_streams_to_vector.block.yml
@@ -39,11 +39,11 @@ asserts:
 
 templates:
     imports: from gnuradio import blocks
-    make: blocks.streams_to_vector(${type.size}*${vlen}, ${num_streams})
+    make: blocks.streams_to_vector(${type.size}*(${vlen}), ${num_streams})
 
 cpp_templates:
     includes: ['#include <gnuradio/blocks/streams_to_vector.h>']
     declarations: 'blocks::streams_to_vector::sptr ${id};'
-    make: 'this->${id} = blocks::streams_to_vector::make(${type.size}*${vlen}, ${num_streams});'
+    make: 'this->${id} = blocks::streams_to_vector::make(${type.size}*(${vlen}), ${num_streams});'
 
 file_format: 1
