--- a/gr-blocks/grc/blocks_vector_to_stream.block.yml
+++ b/gr-blocks/grc/blocks_vector_to_stream.block.yml
@@ -38,11 +38,11 @@ asserts:
 
 templates:
     imports: from gnuradio import blocks
-    make: blocks.vector_to_stream(${type.size}*${vlen}, ${num_items})
+    make: blocks.vector_to_stream(${type.size}*(${vlen}), ${num_items})
 
 cpp_templates:
     includes: ['#include <gnuradio/blocks/vector_to_stream.h>']
     declarations: 'blocks::vector_to_stream::sptr ${id};'
-    make: 'this->${id} = blocks::vector_to_stream::make(${type.size}*${vlen}, ${num_items});'
+    make: 'this->${id} = blocks::vector_to_stream::make(${type.size}*(${vlen}), ${num_items});'
 
 file_format: 1
