--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,7 +44,7 @@ include(GrComponent)
 SET(VERSION_MAJOR 3)
 SET(VERSION_API   10)
 SET(VERSION_ABI   2)
-SET(VERSION_PATCH 0)
+SET(VERSION_PATCH git)
 include(GrVersion) #setup version info
 
 #Set minimum version requirements
