Fixing some formatting
Signed-off-by: Volker Schroer <3470424+dl1ksv@users.noreply.github.com>

--- a/gr-qtgui/examples/CMakeLists.txt
+++ b/gr-qtgui/examples/CMakeLists.txt
@@ -25,6 +25,8 @@ GR_PYTHON_INSTALL(PROGRAMS
 
 install(
     FILES
+    qtgui_display_text_msg.grc
+    qtgui_display_text_sink.grc
     qtgui_message_inputs.grc
     qtgui_multi_input.grc
     qtgui_tags_viewing.grc
