--- a/gr-blocks/include/gnuradio/blocks/CMakeLists.txt
+++ b/gr-blocks/include/gnuradio/blocks/CMakeLists.txt
@@ -16,6 +16,8 @@ install(FILES
     and_const.h
     api.h
     argmax.h
+    blockinterleaver_xx.h
+    blockinterleaving.h
     control_loop.h
     correctiq.h
     correctiq_auto.h
@@ -133,8 +135,6 @@ install(FILES
     streams_to_stream.h
     streams_to_vector.h
     stretch_ff.h
-    symbolinterleaving.h
-    symbolinterleaver_xx.h
     tag_debug.h
     tag_gate.h
     tag_share.h
