--- a/gr-qtgui/grc/qtgui_freq_sink_x.block.yml
+++ b/gr-qtgui/grc/qtgui_freq_sink_x.block.yml
@@ -501,14 +501,12 @@ cpp_templates:
         ${id}->enable_axis_labels(${axislabels});
         ${id}->enable_control_panel(${ctrlpanel});
 
-        if (!${legend}) {
-            ${id}->disable_legend(); // if (!legend)
-        }
-
-        /* C++ doesn't have this
-        if ("${type}" == "float" or "${type}" == "msg_float") {
-            this->${id}->set_plot_pos_half(not ${freqhalf});
-        }*/
+        % if legend == "False":
+        ${id}->disable_legend();
+        % endif
+        % if type.endswith('float'):
+        ${id}->set_plot_pos_half(not ${freqhalf});
+        % endif
 
         {
             std::string labels[10] = {"${label1.strip("'")}", "${label2.strip("'")}", "${label3.strip("'")}", "${label4.strip("'")}", "${label5.strip("'")}",
