--- a/.packaging/conda_recipe/meta.yaml
+++ b/.packaging/conda_recipe/meta.yaml
@@ -52,8 +52,7 @@ requirements:
     - boost-cpp
     - click
     - click-plugins
-    # use codec2 1.0.0 because 1.0.1 has header which fails on Windows (complex.h)
-    - codec2 1.0.0*
+    - codec2
     - fftw
     - gmp  # [not win]
     - gsl
@@ -74,6 +73,7 @@ requirements:
     - volk
   # gnuradio.audio
     - alsa-lib  # [linux]
+    - jack  # [linux]
     - portaudio
   # gnuradio companion
     - gtk3
@@ -86,7 +86,7 @@ requirements:
     - libad9361-iio
   # gnuradio.qtgui
     - pyqt
-    - qt
+    - qt-main
     - qwt
   # gnuradio.soapy
     - soapysdr
@@ -107,17 +107,20 @@ requirements:
     - fftw
     - lxml
     - mako
+    - matplotlib-base
     - menuinst  # [win]
     - numpy
     - packaging
     - {{ pin_compatible('portaudio') }}
     - pygobject
     - pyqt
+    - pyqtgraph
     - python
     - pyyaml
     - jsonschema
     - pyzmq
     - {{ pin_compatible('qwt', max_pin='x.x') }}
+    - scipy
     # need setuptools because modtool uses pkg_resources
     - setuptools
     - thrift  # [not win]
