CI: Update conda package version and source path for easier local use.
Signed-off-by: Ryan Volz <ryan.volz@gmail.com>
(cherry picked from commit 527a802ccdda871877897c39a0b8fa1b80a8ad62)
Signed-off-by: Jeff Long <willcode4@gmail.com>

--- a/.packaging/conda_recipe/meta.yaml
+++ b/.packaging/conda_recipe/meta.yaml
@@ -1,12 +1,14 @@
 {% set name = "gnuradio-dev" %}
-{% set version = (environ.get('GIT_DESCRIBE_TAG', 'untagged')|string|replace('-','_')|replace('v','')|replace('git','')) + '.dev' + environ.get('GIT_DESCRIBE_NUMBER', '0') + '+' + environ.get('GIT_DESCRIBE_HASH', 'local') %}
+{% set version = (environ.get("GIT_DESCRIBE_TAG_PEP440", "0.0.0." + datetime.datetime.now().strftime("%Y%m%d") + ".dev+" + environ.get("GIT_DESCRIBE_HASH", "local"))|string) %}
 
 package:
   name: {{ name|lower }}
   version: {{ version }}
 
 source:
-  git_url: {{ environ.get('FEEDSTOCK_ROOT', '../..') }}
+  # use local path or git repository depending on if the build is local or done on CI
+  path: "../.."  # [not os.environ.get("CI")]
+  git_url: {{ environ.get('FEEDSTOCK_ROOT', "../..") }}  # [os.environ.get("CI")]
 
 build:
   number: 0
@@ -25,6 +27,7 @@ requirements:
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
     - cmake >=3.8
+    - git
     - ninja
     - pkg-config  # [not win]
     - sysroot_linux-64 2.17  # [linux64]
