gr-network: port to standalone asio
Signed-off-by: japm48 <japm48gh@gmail.com>

--- a/.packaging/conda_recipe/meta.yaml
+++ b/.packaging/conda_recipe/meta.yaml
@@ -91,6 +91,8 @@ requirements:
     - pyqt
     - qt-main
     - qwt
+  # gnuradio.network
+    - asio
   # gnuradio.soapy
     - soapysdr
   # gnuradio.uhd
