--- a/.packaging/debian/control
+++ b/.packaging/debian/control
@@ -6,9 +6,10 @@ Build-Depends: cmake,
                debhelper (>= 12~),
                dh-python,
                doxygen,
-	            gir1.2-gtk-3.0,
-	            gir1.2-pango-1.0,
-	            graphviz,
+               gir1.2-gtk-3.0,
+               gir1.2-pango-1.0,
+               graphviz,
+               libasio-dev,
                libasound2-dev,
                libboost-date-time-dev,
                libboost-dev,
@@ -21,7 +22,7 @@ Build-Depends: cmake,
                libcodec2-dev (>=0.8),
                libfftw3-dev,
                libfontconfig1-dev,
-	            libgmp-dev,
+               libgmp-dev,
                libgsl-dev (>= 2.0),
                libgsm1-dev,
                libjack-jackd2-dev,
@@ -30,38 +31,38 @@ Build-Depends: cmake,
                libpangocairo-1.0-0,
                libportaudio2,
                libpulse-dev,
-	            libqwt-qt5-dev,
+               libqwt-qt5-dev,
                libsdl1.2-dev,
                libsndfile1-dev,
-	            libthrift-dev [amd64 arm64 armel armhf i386],
+               libthrift-dev [amd64 arm64 armel armhf i386],
                libuhd-dev (>=3.13.1) [!hurd-i386],
                libusb-1.0-0-dev [!kfreebsd-any],
                libusb2-dev [kfreebsd-any],
-	            libvolk2-dev,
+               libvolk2-dev,
                libxi-dev,
                libxrender-dev,
                libzmq3-dev [!hurd-i386] | libzmq-dev [!hurd-i386],
                pkg-config,
                portaudio19-dev,
                pybind11-dev (>=2.4.3),
-	            python3-click,
-	            python3-click-plugins,
+               python3-click,
+               python3-click-plugins,
                python3-dev,
-	            python3-gi,
-	            python3-gi-cairo,
-              python3-jsonschema,
+               python3-gi,
+               python3-gi-cairo,
+               python3-jsonschema,
                python3-lxml,
                python3-mako,
                python3-numpy,
                python3-opengl,
-	            python3-pyqt5 [!hurd-i386],
+               python3-pyqt5 [!hurd-i386],
                python3-scipy,
-	            python3-yaml,
+               python3-yaml,
                python3-zmq [!hurd-i386],
-	            qt5-qmake,
-	            qtbase5-dev,
-	            qttools5-dev,
-	            thrift-compiler [amd64 arm64 armel armhf i386],
+               qt5-qmake,
+               qtbase5-dev,
+               qttools5-dev,
+               thrift-compiler [amd64 arm64 armel armhf i386],
                xmlto,
                libsoapysdr-dev
 Standards-Version: 4.4.0
@@ -84,17 +85,17 @@ Depends: gir1.2-gtk-3.0,
          python3-mako,
          python3-numpy,
          python3-opengl,
-	      python3-pyqt5 [!hurd-i386],
-	      python3-pyqtgraph,
+         python3-pyqt5 [!hurd-i386],
+         python3-pyqtgraph,
          python3-sip,
-	      python3-yaml,
+         python3-yaml,
          python3-zmq [!hurd-i386],
          ${misc:Depends},
          ${python3:Depends},
          ${shlibs:Depends}
 Recommends: gnuradio-dev,
             python3-matplotlib,
-	         python3-networkx,
+            python3-networkx,
             python3-qwt-qt5,
             python3-scipy,
             rtl-sdr,
