Reorder build order
Build gr-utils first, to use it during the build process
Add ${CMAKE_BINARY_DIR}/gnuradio-runtime/python to python sys.path
This enables bind_intree_file.py to be used during build.

Signed-off-by: Volker Schroer <3470424+dl1ksv@users.noreply.github.com>

--- a/gnuradio-runtime/CMakeLists.txt
+++ b/gnuradio-runtime/CMakeLists.txt
@@ -36,6 +36,7 @@ GR_REGISTER_COMPONENT("gnuradio-runtime" ENABLE_GNURADIO_RUNTIME
     spdlog_FOUND
     pybind11_FOUND
     Volk_FOUND
+    ENABLE_GR_UTILS
 )
 else()
 GR_REGISTER_COMPONENT("gnuradio-runtime" ENABLE_GNURADIO_RUNTIME
