--- a/.packaging/conda_recipe/meta.yaml
+++ b/.packaging/conda_recipe/meta.yaml
@@ -68,6 +68,7 @@ requirements:
     - pip  # [win]
     - pybind11
     - pybind11-abi
+    - pygccxml
     - python
     - spdlog
     - thrift  # [not win]
@@ -110,6 +111,7 @@ requirements:
     - menuinst  # [win]
     - numpy
     - packaging
+    - pygccxml 
     - {{ pin_compatible('portaudio') }}
     - pygobject
     - pyqt
