ci: add ubuntu 22.04 worker
Signed-off-by: Josh Morman <jmorman@gnuradio.org>
(cherry picked from commit 61eb8115ac2c38e6940576d6133702985397b81d)
Signed-off-by: Jeff Long <willcode4@gmail.com>

--- a/.github/workflows/make-test.yml
+++ b/.github/workflows/make-test.yml
@@ -64,6 +64,11 @@ jobs:
             cxxflags: -Werror -Wno-error=invalid-pch
             ctest_args: '-E "qa_cpp_py_binding|qa_cpp_py_binding_set|qa_ctrlport_probes|qa_qtgui|metainfo_test"'
             ldpath:
+          - distro: 'Ubuntu 22.04'
+            containerid: 'gnuradio/ci:ubuntu-22.04-3.9'
+            cxxflags: -Werror -Wno-error=invalid-pch
+            ctest_args: '-E "qa_cpp_py_binding|qa_cpp_py_binding_set|qa_ctrlport_probes|qa_qtgui|qa_polar_..coder_(sc_)?systematic"'
+            ldpath:
           - distro: 'Fedora 35'
             containerid: 'gnuradio/ci:fedora-35-3.9'
             cxxflags: -Werror -Wno-error=invalid-pch -Wno-error=deprecated-declarations
