meson: cleanup across meson.build files
Signed-off-by: Josh Morman <jmorman@gnuradio.org>

--- a/bench/meson.build
+++ b/bench/meson.build
@@ -1,6 +1,6 @@
 # incdir = include_directories('../include')
 
-if (CLI11_dep.found())
+if CLI11_dep.found()
 srcs = ['bm_copy.cc']
 executable('bm_nbt_copy', 
     srcs, 
