meson: don't build cppzmq tests via cmake
Signed-off-by: Josh Morman <jmorman@gnuradio.org>

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -41,6 +41,9 @@ jobs:
           - distro: 'Fedora 35'
             containerid: 'mormj/newsched-ci-docker:fedora-35'
             cxxflags: ''
+          - distro: 'Fedora 36'
+            containerid: 'mormj/newsched-ci-docker:fedora-36'
+            cxxflags: ''
     name: ${{ matrix.distro }}
     container:
       image: ${{ matrix.containerid }}
