gr: Registry and reflection capability
Create a GR registry that maintains knowledge about what modules,
blocks, etc. are available, and has the ability to return generic block
constructors.

Basic usage would be
auto list = gr::registry::modules()
auto f = gr::registry::factory("math","vector_source_f")
auto blk = f(.... map of string/pmt)

Signed-off-by: Josh Morman <jmorman@gnuradio.org>

--- a/gr/lib/constants.cc.in
+++ b/gr/lib/constants.cc.in
@@ -53,6 +53,13 @@ const std::string prefsdir()
     return prefsdir_path.lexically_normal().string();
 }
 
+const std::string libdir()
+{
+    path prefix_path = prefix();
+    path libdir_path = prefix_path / "@LIBDIR@";
+    return libdir_path.lexically_normal().string();
+}
+
 const std::string build_date() { return "@BUILD_DATE@"; }
 
 const std::string version() { return "@VERSION@"; }
